<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuizFragment">

    <TextView
        android:id="@+id/question_textView"
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/firstQuestion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondQuestion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstQuestion_button"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/thirdQuestion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthQuestion_button"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/fourthQuestion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondQuestion_button"
        app:layout_constraintVertical_bias="0.07" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdQuestion_button" />

</androidx.constraintlayout.widget.ConstraintLayout>